@@ -18,6 +18,8 @@ TOOLKIT
 - Added method getAccountOwner() to S3Service which allows you to look up the
   ID and display name of an S3 account's owner, even if the account contains
   no buckets.
+- Tweaks to improve support for using JetS3t with the open source Eucalyptus
+  cloud computing service.
 
   * REST Implementation
 
